--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,37 @@
-blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
-filelock==3.13.1
-Flask==3.0.0
+colorama==0.4.6
+filelock==3.12.2
+Flask==2.2.5
 Flask-Cors==4.0.0
-fsspec==2023.12.2
-gunicorn==21.2.0
-huggingface-hub==0.19.4
+fsspec==2023.1.0
+huggingface-hub==0.16.4
 idna==3.6
+importlib-metadata==6.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
 MarkupSafe==2.1.3
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.2
+numpy==1.21.6
 packaging==23.2
-pandas==2.1.4
+pandas==1.3.5
 python-dateutil==2.8.2
-python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
 safetensors==0.4.1
-scikit-learn==1.3.2
-scipy==1.11.4
+scikit-learn==1.0.2
+scipy==1.7.3
 six==1.16.0
 summa==1.2.0
-sympy==1.12
-threadpoolctl==3.2.0
-tokenizers==0.15.0
-torch==2.1.1
+threadpoolctl==3.1.0
+tokenizers==0.13.3
+torch==1.13.1
 tqdm==4.66.1
-transformers==4.36.0
-typing_extensions==4.9.0
-tzdata==2023.3
-urllib3==2.1.0
-Werkzeug==3.0.1
+transformers==4.30.2
+typing-extensions==4.7.1
+urllib3==2.0.7
+Werkzeug==2.2.3
+zipp==3.15.0
